--- a/server/public/index.html
+++ b/server/public/index.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>chatterbox</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="/styles/styles.css">
 
     <!-- dependencies -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.6.15/browser.js"></script>
-    <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="/bower_components/jquery/dist/jquery.js"></script>
     <!-- your scripts -->
-    <script src="scripts/app.js"></script>
+    <script src="/scripts/app.js"></script>
   </head>
   <body>
     <div id="main">
       <h1>chatterbox</h1>
       <!-- Your HTML goes here! -->
 
-      <div class="spinner"><img src="images/spiffygif_46x46.gif"></div>
+      <div class="spinner"><img src="/images/spiffygif_46x46.gif"></div>
       <div id="rooms">
         Room:
         <select id="roomSelect">
